# surface-min

./: CMakeLists.txt  MyProject.cbp  README.md
geom_descr/: geomCarre.geo  geomL.geo  geomTrou.geo  geomTrou.msh
src/: fctOpt.hpp  formes.cpp  formes.hpp  maillage.cpp  maillage.hpp  main.cpp  matrice.cpp  matrice.hpp  optimiseur.cpp  optimiseur.hpp  vecteur.cpp  vecteur.hpp
